tests/negative/test-fail-struct3.std
Fatal error: exception Dune__exe__Sast.SemanticError("field name mismatch in struct expression")